Closed Bug 996285 Opened 10 years ago Closed 10 years ago

Profiler stops duplicating samples during sleeping periods after buffer wraps

Categories

(Core :: Gecko Profiler, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: vikstrous, Assigned: vikstrous)

Details

Attachments

(1 file, 1 obsolete file)

      No description provided.
Assignee: nobody → vstanchev
Comment on attachment 8406479 [details] [diff] [review]
profiler_sleeping_bug

Review of attachment 8406479 [details] [diff] [review]:
-----------------------------------------------------------------

::: tools/profiler/ProfileEntry.cpp
@@ +464,4 @@
>    // Scan the whole buffer (even unflushed parts)
>    // we add mEntrySize to mReadPos to make sure that when
>    // we wrap around the result is mEntrySize-1 and not -1
> +  for (int readPos = (mWritePos + mEntrySize - 1) % mEntrySize; readPos != (mReadPos + mEntrySize - 1) % mEntrySize; readPos = (readPos + mEntrySize - 1) % mEntrySize) {

This is getting out of land, you should format as:
for (....;
     ....;
     ....) {
Attachment #8406479 - Flags: review?(bgirard) → review+
Fixed formatting and comments
Attachment #8406479 - Attachment is obsolete: true
Flags: needinfo?(bgirard)
https://hg.mozilla.org/mozilla-central/rev/408e7a1d91a1
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.