Bug 996285 - Profiler stops duplicating samples during sleeping periods after buffer wraps. r=benwa